--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Quick Link</p>
+                            <p class="text-[#313131] font-semibold dark:text-white">Quick Link</p>
                             <div class="flex">
                                 <a href="#">Home</a>
                                 <a href="#">Who We Are</a>
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div>
-                            <p class="text-[#313131]">Technologies</p>
+                            <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
                             <div class="">
                                 <a href="#">HTML</a>
                                 <a href="#">CSS</a>
