Add dark color and hover underline on links

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Quick Link</p>
                             <div class="flex">
-                                <a href="#">Home</a>
-                                <a href="#">Who We Are</a>
-                                <a href="#">Our Philosophy</a>
+                                <a href="#" class="dark:text-white hover:underline">Home</a>
+                                <a href="#" class="dark:text-white hover:underline">Who We Are</a>
+                                <a href="#" class="dark:text-white hover:underline">Our Philosophy</a>
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
-                            <div class="">
+                            <div class="dark:text-white hover:underline">
                                 <a href="#">HTML</a>
                                 <a href="#">CSS</a>
                                 <a href="#">JavaScript</a>
