--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white" >Subscribe.</h1>
-                            <div class="flex">
+                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                 <button class="w-full px-6 py-2.5 bg-white px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                     Subscribe
@@ -32,10 +32,10 @@
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
-                            <div class="dark:text-white hover:underline">
-                                <a href="#">HTML</a>
-                                <a href="#">CSS</a>
-                                <a href="#">JavaScript</a>
+                            <div class="">
+                                <a href="#" class="dark:text-white hover:underline">HTML</a>
+                                <a href="#" class="dark:text-white hover:underline">CSS</a>
+                                <a href="#" class="dark:text-white hover:underline">JavaScript</a>
                             </div>
                         </div>
                     </div>
