--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white" >Subscribe to our newsletter for updates.</h1>
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
-                                <button class="w-full px-6 py-2.5 bg-white px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <button class="w-full px-6 py-2.5 bg-[#d86943] px-4 py-2 text-[#313131] bg-[#d86943] border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                     Subscribe
                                 </button>
                             </div>
@@ -25,17 +25,21 @@
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Quick Link</p>
                             <div class="flex">
-                                <a href="#" class="dark:text-white hover:underline">Home</a>
-                                <a href="#" class="dark:text-white hover:underline">Who We Are</a>
-                                <a href="#" class="dark:text-white hover:underline">Our Philosophy</a>
+                                <ul>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Home</a></li>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Who We Are</a></li>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Our Philosophy</a></li>
+                                </ul>                                
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
                             <div class="">
-                                <a href="#" class="dark:text-white hover:underline">HTML</a>
-                                <a href="#" class="dark:text-white hover:underline">CSS</a>
-                                <a href="#" class="dark:text-white hover:underline">JavaScript</a>
+                                <ul>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">HTML</a></li>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">CSS</a></li>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">JavaScript</a></li>
+                                </ul>                                
                             </div>
                         </div>
                     </div>
