--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
         <div class="container">
-            <footer class="bg-[#659f8f] dark:bg-[#313131]">
+            <footer class="bg-[#659f8f] dark:bg-[#313131] p-12">
                 <div class="container px-6 py-12 mx-auto">
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white" >Subscribe to our newsletter for updates.</h1>
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
-                                <button class="w-full px-6 py-2.5 bg-[#d86943] px-4 py-2 text-[#313131] bg-[#d86943] border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <button class="w-full px-6 py-2.5 bg-[#d86943] px-4 py-2 text-[#313131] bg-[#d86943] border-[#d86943] rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                     Subscribe
                                 </button>
                             </div>
