--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white" >Subscribe to our newsletter for updates.</h1>
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input id="email" type="text" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
-                                <button class="w-full px-6 py-2.5 bg-[#d86943] px-4 py-2 text-[#313131] bg-[#d86943] border-[#d86943] rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <button class="w-full px-6 py-2.5 text-[#313131] bg-[#d86943] rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                     Subscribe
                                 </button>
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Quick Link</p>
-                            <div class="flex">
+                            <div class="flex my-6">
                                 <ul>
                                     <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Home</a></li>
                                     <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Who We Are</a></li>
@@ -34,9 +34,9 @@
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
-                            <div class="">
+                            <div class="flex my-6">
                                 <ul>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">HTML</a></li>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline my-2">HTML</a></li>
                                     <li><a href="#" class="text-[#313131] dark:text-white hover:underline">CSS</a></li>
                                     <li><a href="#" class="text-[#313131] dark:text-white hover:underline">JavaScript</a></li>
                                 </ul>                                
