--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white" >Subscribe to our newsletter for updates.</h1>
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
-                                <input id="email" type="text" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
-                                <button class="w-full px-6 py-2.5 text-[#313131] bg-[#d86943] rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <input id="email" type="email" placeholder="Email Address" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-white dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <button class="mx-3 px-6 py-2.5 text-white bg-[#d86943] rounded-md dark:bg-[#d86943] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                     Subscribe
                                 </button>
                             </div>
@@ -36,7 +36,7 @@
                             <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
                             <div class="flex my-6">
                                 <ul>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline my-2">HTML</a></li>
+                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">HTML</a></li>
                                     <li><a href="#" class="text-[#313131] dark:text-white hover:underline">CSS</a></li>
                                     <li><a href="#" class="text-[#313131] dark:text-white hover:underline">JavaScript</a></li>
                                 </ul>                                
