--- a/index.html
+++ b/index.html
@@ -11,35 +11,31 @@
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
         <div class="container">
             <footer class="bg-[#659f8f] dark:bg-[#313131] p-12">
-                <div class="container px-6 py-12 mx-auto">
+                <div class="container md:p-12 mx-auto">
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
                             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white" >Subscribe to our newsletter for updates.</h1>
-                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
+                            <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row gap-x-3">
                                 <input id="email" type="email" placeholder="Email Address" class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-white dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
-                                <button class="mx-3 px-6 py-2.5 text-white bg-[#d86943] rounded-md dark:bg-[#d86943] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
+                                <button class="px-6 py-2.5 text-white bg-[#d86943] rounded-md dark:bg-[#d86943] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
                                     Subscribe
                                 </button>
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Quick Link</p>
-                            <div class="flex my-6">
-                                <ul>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Home</a></li>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Who We Are</a></li>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">Our Philosophy</a></li>
-                                </ul>                                
+                            <div class="flex my-4 flex-col gap-y-2">                                
+                                <a href="#" class="text-[#313131] dark:text-white hover:underline">Home</a>
+                                <a href="#" class="text-[#313131] dark:text-white hover:underline">Who We Are</a>
+                                <a href="#" class="text-[#313131] dark:text-white hover:underline">Our Philosophy</a>                                
                             </div>
                         </div>
                         <div>
                             <p class="text-[#313131] font-semibold dark:text-white">Technologies</p>
-                            <div class="flex my-6">
-                                <ul>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">HTML</a></li>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">CSS</a></li>
-                                    <li><a href="#" class="text-[#313131] dark:text-white hover:underline">JavaScript</a></li>
-                                </ul>                                
+                            <div class="flex my-4 flex-col gap-y-2">                                
+                                <a href="#" class="text-[#313131] dark:text-white hover:underline">HTML</a>
+                                <a href="#" class="text-[#313131] dark:text-white hover:underline">CSS</a>
+                                <a href="#" class="text-[#313131] dark:text-white hover:underline">JavaScript</a>                  
                             </div>
                         </div>
                     </div>
