Update remaining text colours

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     
-                    <hr class="my-6 border-[#d86943] dark:text-white">
+                    <hr class="my-6 border-[#d86943] text-[#313131] dark:text-white">
                     
                     <div class="flex items-center justify-between">
                         <a href="#">
